2014-06-23  Vanessa Gil  <vanessa.gil@artica.es>

	* win32/bin/pandora_agent.conf: Fixed encoding
	bug.

2014-06-23  Vanessa Gil  <vanessa.gil@artica.es>

	* win32/bin/pandora_agent.conf: Fixed bug creating
	a module with accents.

2014-06-11  Vanessa Gil  <vanessa.gil@artica.es>

	* pc/plugins/inventory: Fixed bug in inventory
	plugin (Ubuntu 12.04).

2014-05-30  Sancho Lerena <slerena@artica.es>

	* unix/Linux/pandora_agent.conf: New default configuration file.
	Similar monitor names as in Windows agent.

	* unix/plugins/pandora_df_free,
	unix/plugins/pandora_mem,
	unix/plugins/pandora_netusage: New linux plugins for returning
	disk free space in %, memory in % and netusage in bytes/sec.

	* win32/bin/pandora_agent.conf: New default configuration file
	Simplified modules, use of new plugins and same module names
	for most monitors as linux agent
	
	* win32/bin/util/df_percent.vbs: Modified plugin for return
	unit and predefined thresholds.
	
	* win32/bin/util/nettraffic.vbs,
	win32/bin/util/software_installed.vbs: New agent plugins for
	network usage and software installed inventory plugin, to fix
	embedded agent inventory which doesnt report all packages.

2014-05-21  Vanessa Gil  <vanessa.gil@artica.es>

	* pc/plugins/pandora_df
	  shellscript/linux/plugins/pandora_df
	  unix/plugins/pandora_df: Applied patch 
	'pandora_fs.excludefs.patch'.

2014-05-20  Vanessa Gil  <vanessa.gil@artica.es>

	* win32/bin/pandora_agent.conf: Fixed typographic error.

2013-10-13  Junichi Satoh  <junichi@rworks.jp>

	* unix/tentacle_server: Upgraded to 0.4.0. (Imported from trunk of
        tentacled repository.)
	Added IPv6 support.

2013-09-12  Ramon Novoa  <rnovoa@artica.es>

	* win32/modules/pandora_module_logevent.cc: Write to the log file
	  (instead of the debug log) if Wevtapi.dll cannot be found.

2013-08-13  Ramon Novoa  <rnovoa@artica.es>

	* unix/pandora_agent: Display proxy mode errors in the log file.

2013-07-10 Miguel de Dios <miguel.dedios@artica.es>
